Fix: Resolve dependency and code quality issues after release 4.1.0 (#65)
* fix: Resolve dependency and code quality issues after release 4.1.0

- Fix cui-test-value-objects dependency version (use parent POM version 2.1.1)
- Suppress OpenRewrite LogRecord warnings with cui-rewrite:disable comments
- Add project documentation (CLAUDE.md, doc/commands.md)
- Update GitHub workflows configuration
- Format all source files with license headers
- Resolve deprecation warnings in test code

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: Remove maven.compiler.release override to support multi-version builds

The maven.compiler.release=21 property was conflicting with CI builds for Java 17/24.
Removed the override to allow the parent POM to manage compiler settings.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* Remove Java 17 from CI build matrix

Parent POM upgrade to 1.3.4 enforces Java 21 minimum requirement
via maven-enforcer-plugin. Removed Java 17 from build matrix to
fix enforcer failures.

Build matrix now: [21, 24]

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* Use maven.compiler.release for proper cross-compilation

Replaced -Dmaven.compiler.source and -Dmaven.compiler.target with
-Dmaven.compiler.release for CI matrix builds. This ensures:

- Proper API validation (prevents using newer APIs than target version)
- Correct bootclasspath for cross-compilation
- Modern best practice (JDK 9+ standard)
- Single property instead of two

Fixes potential issue where Java 24 build could accidentally use
Java 22-24 APIs while targeting Java 21 bytecode.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: Update JDK version from 17 to 21 in CI configuration

* fix: Add null check for varargs in setReques