@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -116,7 +116,7 @@ public class JsfSetupExtension implements TestInstancePostProcessor, BeforeEachC
         retrieveEnableJSFAnnotations(testInstance.getClass(), environments);
         if (!environments.isEmpty()) {
             // Use the outermost annotation
-            useIdentityResourceBundle = environments.get(0).useIdentityResourceBundle();
+            useIdentityResourceBundle = environments.getFirst().useIdentityResourceBundle();
         }
 
         var environment = new JsfEnvironmentHolder(setup);
@@ -131,7 +131,7 @@ public class JsfSetupExtension implements TestInstancePostProcessor, BeforeEachC
         setup.setApplication(environment.getFacesContext().getApplication());
 
         LOGGER.debug(() -> "Registering Decorators");
-        Set<JsfTestConfiguration> decoratorAnnotations = new LinkedHashSet<>(16);
+        Set<JsfTestConfiguration> decoratorAnnotations = LinkedHashSet.newLinkedHashSet(16);
 
         retrieveDecoratorAnnotations(testInstance.getClass(), decoratorAnnotations);
         decoratorAnnotations = decoratorAnnotations.stream().filter(Objects::nonNull).collect(Collectors.toSet());
@@ -280,14 +280,14 @@ public class JsfSetupExtension implements TestInstancePostProcessor, BeforeEachC
         retrieveEnableJSFAnnotations(testClass, methodAnnotations, testMethod.get());
 
         // Check for method-level JsfTestConfiguration annotations
-        Set<JsfTestConfiguration> decoratorAnnotations = new LinkedHashSet<>(16);
+        Set<JsfTestConfiguration> decoratorAnnotations = LinkedHashSet.newLinkedHashSet(16);
         retrieveDecoratorAnnotations(testClass, decoratorAnnotations, testMethod.get());
         decoratorAnnotations = decoratorAnnotations.stream().filter(Objects::nonNull).collect(Collectors.toSet());
 
         // Apply method-level EnableJsfEnvironment annotation if present
         if (!methodAnnotations.isEmpty()) {
             // Method-level annotation found, apply it
-            EnableJsfEnvironment annotation = methodAnnotations.get(0);
+            EnableJsfEnvironment annotation = methodAnnotations.getFirst();
 
             // Update the identity resource bundle setting
             ConfigurableApplication.createWrapAndRegister((MockFacesContext) environment.getFacesContext())
