@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -32,9 +32,10 @@ import static java.util.Objects.requireNonNull;
 /**
  * Simulate {@link ConfigurableNavigationHandler}
  */
+// cui-rewrite:disable CuiLogRecordPatternRecipe
 public class CuiMockConfigurableNavigationHandler extends ConfigurableNavigationHandler {
 
-    private static final CuiLogger log = new CuiLogger(CuiMockConfigurableNavigationHandler.class);
+    private static final CuiLogger LOGGER = new CuiLogger(CuiMockConfigurableNavigationHandler.class);
 
     @Getter
     private final Map<String, Set<NavigationCase>> navigationCases = new HashMap<>();
@@ -134,14 +135,11 @@ public class CuiMockConfigurableNavigationHandler extends ConfigurableNavigation
         final var key = calculateKey(fromAction, outcome);
         if (navigationCases.containsKey(key)) {
             final List<NavigationCase> list = mutableList(navigationCases.get(key));
-            return list.get(0);
+            return list.getFirst();
         }
 
-        log.warn(
-            """
-                Could not find requested navigation case '{}'.\
-                 You can programmatically register the navigation case using ApplicationConfigDecorator#registerNavigationCase.\
-                """,
+        LOGGER.warn(
+            "Could not find requested navigation case '%s'. You can programmatically register the navigation case using ApplicationConfigDecorator#registerNavigationCase.",
             key);
         return null;
     }
